Fixed footer button spacing

--- a/assets/css/structure.css
+++ b/assets/css/structure.css
@@ -142,11 +142,19 @@ h4, h5, h6 {
     right:0;
 }
 .navSocialFooter{
-    position: absolute;
-    right:0;
-    display: none;
+  position: absolute;
+  left: 0px;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  width: 100%;
 }
-
+.navSocialFooter svg {
+  width: 10vw !important;
+  margin: 0px 2vw 6px 2vw !important;
+  position: relative !important;
+  left: 0 !important;
+}
 
 
 p {
@@ -1293,10 +1301,18 @@ code {
 
   .navSocialFooter{
     position: absolute;
-    right:0;
+    left: 0px;
     display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    width: 100%;
 }
-
+.navSocialFooter svg {
+  width: 10vw !important;
+  margin: 0px 2vw 6px 2vw !important;
+  position: relative !important;
+  left: 0 !important;
+}
   .main-content {
     padding-top: 15px; 
   }
